website-source/_shared/css/brand.css
@font-face {
    font-family: "Atkinson Hyperlegible";
    src: url(/_shared/fonts/AtkinsonHyperlegibleNextVF-Variable.woff2) format('woff2');
    font-display: swap;
}

@font-face {
    font-family: "Atkinson Hyperlegible Mono";
    src: url(/_shared/fonts/AtkinsonHyperlegibleMonoVF-Variable.woff2) format('woff2');
    font-display: swap;
}


/*
##     ##    ###    ########   ######
##     ##   ## ##   ##     ## ##    ##
##     ##  ##   ##  ##     ## ##
##     ## ##     ## ########   ######
 ##   ##  ######### ##   ##         ##
  ## ##   ##     ## ##    ##  ##    ##
   ###    ##     ## ##     ##  ######
*/

:root {
    interpolate-size: allow-keywords;

    /* FONT SCALE */
    /* --font-size--2: clamp(0.7813rem, 0.6356rem + 0.7283vw, 1.2rem);
    --font-size--1: clamp(0.9375rem, 0.7418rem + 0.9783vw, 1.5rem);
    --font-size-0: clamp(1.125rem, 0.8641rem + 1.3043vw, 1.875rem);
    --font-size-1: clamp(1.35rem, 1.0043rem + 1.7283vw, 2.3438rem);
    --font-size-2: clamp(1.62rem, 1.1643rem + 2.2783vw, 2.93rem);
    --font-size-3: clamp(1.9438rem, 1.3461rem + 2.988vw, 3.6619rem);
    --font-size-4: clamp(2.3325rem, 1.5516rem + 3.9043vw, 4.5775rem);
    --font-size-5: clamp(2.7994rem, 1.7829rem + 5.0826vw, 7.7219rem);

    --font-size--2: clamp(0.7813rem, 0.7747rem + 0.0326vw, 0.8rem);
    --font-size--1: clamp(0.9375rem, 0.9158rem + 0.1087vw, 1rem);
    --font-size-0: clamp(1.125rem, 1.0815rem + 0.2174vw, 1.25rem);
    --font-size-1: clamp(1.35rem, 1.2761rem + 0.3696vw, 1.5625rem);
    --font-size-2: clamp(1.62rem, 1.5041rem + 0.5793vw, 1.9531rem);
    --font-size-3: clamp(1.944rem, 1.771rem + 0.8651vw, 2.4414rem);
    --font-size-4: clamp(2.3328rem, 2.0827rem + 1.2504vw, 3.0518rem);
    --font-size-5: clamp(2.7994rem, 2.4462rem + 1.7658vw, 3.8147rem); */

    --font-size--2: clamp(0.7813rem, 0.7302rem + 0.2554vw, 0.96rem);
    --font-size--1: clamp(0.9375rem, 0.8625rem + 0.375vw, 1.2rem);
    --font-size-0: clamp(1.125rem, 1.0179rem + 0.5357vw, 1.5rem);
    --font-size-1: clamp(1.35rem, 1.2rem + 0.75vw, 1.875rem);
    --font-size-2: clamp(1.62rem, 1.4132rem + 1.0339vw, 2.3438rem);
    --font-size-3: clamp(1.944rem, 1.6624rem + 1.4081vw, 2.9297rem);
    --font-size-4: clamp(2.3328rem, 1.953rem + 1.899vw, 3.6621rem);
    --font-size-5: clamp(2.7994rem, 2.2913rem + 2.5404vw, 4.5776rem);

    /* SPACE SCALE */
    --space-3xs: clamp(0.3125rem, 0.2473rem + 0.3261vw, 0.5rem);
    --space-2xs: clamp(0.5625rem, 0.4321rem + 0.6522vw, 0.9375rem);
    --space-xs: clamp(0.875rem, 0.6793rem + 0.9783vw, 1.4375rem);
    --space-s: clamp(1.125rem, 0.8641rem + 1.3043vw, 1.875rem);
    --space-m: clamp(1.6875rem, 1.2962rem + 1.9565vw, 2.8125rem);
    --space-l: clamp(2.25rem, 1.7283rem + 2.6087vw, 3.75rem);
    --space-xl: clamp(3.375rem, 2.5924rem + 3.913vw, 5.625rem);
    --space-2xl: clamp(4.5rem, 3.4565rem + 5.2174vw, 7.5rem);
    --space-3xl: clamp(6.75rem, 5.1848rem + 7.8261vw, 11.25rem);

    --pg-font: "Atkinson Hyperlegible",
        Inter,
        Roboto,
        'Helvetica Neue',
        'Arial Nova',
        'Nimbus Sans',
        Arial,
        sans-serif;

    --pg-font-mono: "Atkinson Hyperlegible Mono", ui-monospace,
        'Cascadia Code',
        'Source Code Pro',
        Menlo,
        Consolas,
        'DejaVu Sans Mono',
        monospace;

    --pg-max-width: 50ch;
    --pg-wide-0: 100%;
    --pg-wide-1: 70ch;
    --pg-wide-2: 90ch;
    --pg-wide-3: 110ch;
    --pg-wide-4: 130ch;
    --pg-border-body-top: 0.75rem;
    --pg-button-corners: 5px;
    --pg-flow-space: 0.9em;
    --pg-side-padding: var(--space-2xs);
    --pg-radius-round: 1e5px;
    --pg-column-padding: 1rem;
    --pg-colour-blue: #52fff6;
    --pg-colour-pink: #ee9bff;
    --pg-colour-dark-grey: #333;
    --pg-colour-mid-grey: #757575;
    --pg-colour-column-bg: whitesmoke;

    --pg-background-glow: radial-gradient(circle at 8% -20%, var(--pg-colour-blue) 0%, transparent 26%),
        radial-gradient(circle at 37% -45%, var(--pg-colour-pink) 0%, transparent 40%);

    --pg-background-glow-bottom: radial-gradient(circle at 105% 140%, var(--pg-colour-pink) 0%, transparent 16%),
        radial-gradient(circle at 95% 173%, var(--pg-colour-blue) 0%, transparent 20%);

    --pg-background-glow-top-right:

        radial-gradient(circle at calc(100% - 120px) -55px, var(--pg-colour-pink) 0, transparent 100px),

        radial-gradient(circle at calc(100% - 0px) -50px, var(--pg-colour-blue) 0, transparent 140px);


}

@media (prefers-color-scheme: dark) {
    :root {
        /* --rs-colour-ec-dark-blue: white; */
    }
}

/*
########     ###     ######  ########
##     ##   ## ##   ##    ## ##
##     ##  ##   ##  ##       ##
########  ##     ##  ######  ######
##     ## #########       ## ##
##     ## ##     ## ##    ## ##
########  ##     ##  ######  ########
*/

html,
body {
    margin: 0;
    padding: 0;
    scroll-behavior: smooth;
}

body {
    --pg-bg-alpha: 0.1;
    --pg-bg-size: 0.5rem;
    --pg-bg-position: calc(var(--pg-bg-size) / 2);
    --border-color: linear-gradient(to right,
            var(--pg-colour-blue),
            var(--pg-colour-pink));
    font-family: var(--pg-font);
    font-weight: normal;
    font-size: var(--font-size-0);
    background-color: white;
    color: var(--pg-colour-dark-grey);
    background-image: radial-gradient(circle at center,
            rgba(51, 51, 51, var(--pg-bg-alpha)) 1px,
            transparent 0), radial-gradient(circle at center, rgba(51, 51, 51, var(--pg-bg-alpha)) 1px, transparent 0);
    background-size: var(--pg-bg-size) var(--pg-bg-size);
    background-position: 0 0, var(--pg-bg-position) var(--pg-bg-position);
    border-top: var(--pg-border-body-top) solid var(--pg-colour-blue);
    border-image: var(--border-color) 1;
}

.pg-main-inner {
    padding-block-start: var(--space-m);
}

header,
.pg-main-inner,
footer {
    background-color: var(--pg-colour-column-bg);
    padding-inline: var(--space-2xs);
    margin-block: 0;
}
/* ... */

